# The-AI-Engineer-Challenge

./: MERGE.md  README.md  pyproject.toml
.cursor/rules/: branching-rule.mdc
aimakerspace/: text_utils.py
aimakerspace/openai_utils/: embedding.py
api/: README.md  app.py  index.py  requirements.txt  vercel.json
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  page.module.css  page.tsx
frontend/src/app/: page.module.css  page.tsx
